force-app/main/default/objects/BrillioFC__Email_Alert__c/BrillioFC__Email_Alert__c.object-meta.xml
<CustomObject>
    <label>Email Alert</label>
    <nameField>
        <label>Workflow Email Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>