force-app/main/default/objects/BrillioFC__Email_Alert__c/fields/BrillioFC__Description__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>