force-app/main/default/objects/BrillioFC__Email_Alert__c/fields/BrillioFC__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__DeveloperName__c</fullName>
    <externalId>true</externalId>
    <label>DeveloperName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>