force-app/main/default/objects/BrillioFC__Email_Alert__c/fields/BrillioFC__Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>