force-app/main/default/objects/BrillioFC__Email_Alert__c/fields/BrillioFC__Number_of_WF_Rules__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_WF_Rules__c</fullName>
    <label>Number of WF Rules</label>
    <summaryForeignKey>BrillioFC__Workflow_Email_Alert__c.BrillioFC__Email_Alert__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>