force-app/main/default/objects/BrillioFC__Email_Alert__c/fields/BrillioFC__Object_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Object_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Detail</label>
    <referenceTo>BrillioFC__Object_Detail__c</referenceTo>
    <relationshipLabel>Email Alerts</relationshipLabel>
    <relationshipName>Workflow_Email_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>