force-app/main/default/objects/BrillioFC__Email_Alert__c/fields/BrillioFC__Org_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Org_Detail__c</fullName>
    <label>Org Detail</label>
    <referenceTo>BrillioFC__Org_Details__c</referenceTo>
    <relationshipLabel>Email Alerts</relationshipLabel>
    <relationshipName>Email_Alerts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>